completed profile styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,7 @@
 
 //global css
 
-body {
-  background:#5ABAAE;
-  overflow:hidden;
-}
+
 
 #translate {
   form#edit_document_7{
@@ -29,4 +26,8 @@ body {
     }
   }
 
+}
+
+a{
+  text-decoration: none;
 }
