--- a/app/views/shared/_body_measurements_form.html.erb
+++ b/app/views/shared/_body_measurements_form.html.erb
@@ -1,5 +1,5 @@
-<h1>Body measurements form</h1>
 <div class = "container-sm p-4 mt-3">
+<h1>Body Measurements</h1>
 <%= simple_form_for @user do |f| %>
   <%= f.input :height %>
   <%= f.input :weight %>
