--- a/app/views/documents/show.pdf.erb
+++ b/app/views/documents/show.pdf.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= wicked_pdf_stylesheet_link_tag "pdf" %>
+    <%= wicked_pdf_stylesheet_link_tag "show" %>
   </head>
   <body>
     <div id="header">
