--- a/app/assets/stylesheets/pages/_documents-show.scss
+++ b/app/assets/stylesheets/pages/_documents-show.scss
@@ -2,7 +2,7 @@
   padding: 50px;
 
 h1{
-  color: white;
+  color: #ffffff;
 }
 
 p{
@@ -27,4 +27,45 @@ p{
   padding: 35px;
   background: #f3efef;
   border-radius: 5px;
+}
+
+
+.share-options{
+  border-top-left-radius: 55px;
+  border-top-right-radius: 55px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #0000008c;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px #5ABAAE;
+}
+
+.sharing-icon-card{
+  background: #ffffff;
+  padding: 20px;
+  margin-top:20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 30px;
+  box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.sharing-icon-card:hover{
+  transform: translateY(5px);
+  box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+
+
+.sharing-icon-card:active{
+  box-shadow: 0px 0px 0px #999999;
+}
+
+@media only screen and (max-width: 600px) {
+  .sharing-icon-card {
+    padding: 10px;
+    width: 70px;
+    height: 70px;
+    border-radius: 20px;
+  }
 }
