--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -3,26 +3,7 @@
   <p><%= @document.date %>: Dr.<%= @document.doctor_name %> - <%= @document.country %></p>
   <p><%= @document.comment %></p>
 
-  <% if params[:query].present? %>
-    <div class =  "container mt-3 mb-3 text-center" data-controller = "document">
-      <h1 id = "share" data-action="click->document#revealContent">Share Your Document</h1>
-      <button id = "share" class = "home-icon-card"  data-action="click->document#revealContent" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <%= image_tag "qr_code.png", class: "img-fluid icon-image" %>
-      </button>
-      <button id = "share" class = "home-icon-card"  data-action="click->document#revealContent">
-                <%= image_tag "airdrop.png", class: "img-fluid icon-image" %>
-      </button>
-      <button id = "share" class = "home-icon-card"  data-action="click->document#revealContent">
-                <%= image_tag "link.png", class: "img-fluid icon-image" %>
-      </button>
-      <button id = "share" class = "home-icon-card"  data-action="click->document#revealContent">
-                <%= image_tag "mail.png", class: "img-fluid icon-image" %>
-      </button>
-    </div>
-    <div class="qr-container mb-3 d-none" data-document-target="qr-code-show">
-      <%= @svg.html_safe %>
-    </div>
-  <% end %>
+
 
   <%= form_with url: document_path(@document), method: :get, class: "d-flex" do %>
     <%= select_tag :query,
@@ -38,4 +19,29 @@
  <p class = "content"><%= sentence[1..-2].gsub(/((&quot;)|"|(&quot))/, "") %></p>
 <% end %>
  </div>
+
+
 </div>
+
+ <% if params[:query].present? %>
+    <div class =  "container text-center share-options animate__animated animate__slideInUp" data-controller = "document">
+      <h3 id = "share" data-action="click->document#revealContent">Share Your Document</h3>
+      <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <%= image_tag "qr_code.png", class: "img-fluid icon-image" %>
+      </button>
+      <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
+                <%= image_tag "airdrop.png", class: "img-fluid icon-image" %>
+      </button>
+      <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
+                <%= image_tag "link.png", class: "img-fluid icon-image" %>
+      </button>
+      <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
+                <%= image_tag "mail.png", class: "img-fluid icon-image" %>
+      </button>
+
+  <% end %>
+</div>
+
+ <div class="qr-container mb-3 d-none" data-document-target="qr-code-show">
+      <%= @svg.html_safe %>
+      </div>
