--- a/app/views/layouts/pdf.pdf.erb
+++ b/app/views/layouts/pdf.pdf.erb
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>HealthPocket</title>
+    <meta charset="utf-8" />
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= wicked_pdf_stylesheet_link_tag "show" %>
+    <%= wicked_pdf_stylesheet_pack_tag "application" %>
   </head>
   <body>
     <div id="header">
