--- a/app/views/documents/show.pdf.erb
+++ b/app/views/documents/show.pdf.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>HealthPocket</title>
+    <meta charset="utf-8" />
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
