--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,4 +1,4 @@
-<div class = "container-sm p-4 mt-3">
+<div class = "container-sm p-4 mt-3 form">
 <%= simple_form_for @document do |f| %>
   <%= f.input :doctor_name %>
   <%= f.input :country %>
