--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -7,19 +7,17 @@
 }
 
 .material-symbols-outlined {
-  padding-top: 20px;
   text-align: center;
-  padding: 20px;
-  background-color: #f0f8ff;
-  border-radius: 10px;
-  box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   color: black;
-
-
 }
+
+
+
 
 .material-symbols-outlined:hover{
-    transform: translateY(5px);
-    box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+color: #5c5470;
 }
+
+ // transform: translateY(5px);
+    // box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
