--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -86,6 +86,22 @@ margin-left: 20px;
 }
 
 
+.document-icon-button{
+  background: #ffffff;
+  padding: 20px;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.document-icon-button:hover{
+  transform: translateY(5px);
+  box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+
+
 @media only screen and (max-width: 600px) {
   .upload-card{
     height: 200px;
