--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -22,18 +22,28 @@
 <% if params[:query].present? %>
   <div class =  "container fixed-bottom text-center share-options animate__animated animate__slideInUp" data-controller = "document">
     <h3 id = "share" data-action="click->document#revealContent">Share Your Document</h3>
+
     <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <%= image_tag "qr_code.png", class: "img-fluid icon-image" %>
     </button>
+
     <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
       <%= image_tag "airdrop.png", class: "img-fluid icon-image" %>
     </button>
+
     <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
       <%= image_tag "link.png", class: "img-fluid icon-image" %>
     </button>
-    <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
-      <%= image_tag "mail.png", class: "img-fluid icon-image" %>
-    </button>
+
+    <%= mail_to "doctor@email.com", nil,
+      cc: "marie@email.com",
+      subject: "Medical Document",
+      body: 'Please find enclosed my medical document.' do %>
+      <button id = "share" class = "sharing-icon-card"  data-action="click->document#revealContent">
+        <%= image_tag "mail.png", class: "img-fluid icon-image" %>
+      </button>
+    <% end %>
+
 
     <%# COMMENT-OUT IF YOU WANT TO CREATE A PDF BUTTON %>
     <%# <%= link_to "PDF", document_path(@document, format: :pdf, query: params[:query]), class: "link-pdf" %>
