Formatted text appears after being scanned for both original and translated languages

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -11,10 +11,9 @@
   <% end %>
 
   <div class = "uploaded-content">
-    <% sentence_array = @sentences.split(",") %>
-    <% sentence_array.each do |sentence| %>
+    <% @sentences.each do |sentence| %>
       <% # %>
-      <p class = "content"><%= sentence[1..-2].gsub(/((&quot;)|"|(&quot))/, "") %></p>
+      <p class = "content"><%= sentence.gsub(/((&quot;)|"|(&quot))/, "") %></p>
     <% end %>
   </div>
 </div>
