--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,7 +1,10 @@
 <%= simple_form_for @document do |f| %>
   <%= f.input :doctor_name %>
-  <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Update Document' %>
-  <%= f.submit "Update Document", class: "btn btn-primary" %>
+  <%= f.input :country %>
+  <%= f.input :date, html5: true %>
+  <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
+  <%= f.input :comment %>
+  <%= f.button :submit, "Upload Document", class: "button" %>
 <% end %>
 
 <%= @document.photo %>
