Hard-coded the format for PDF and scanned text

--- a/app/views/layouts/pdf.pdf.erb
+++ b/app/views/layouts/pdf.pdf.erb
@@ -14,10 +14,30 @@
   <body>
     <div id="header">
     </div>
-    <% @sentences.each do |sentence| %>
-      <%= sentence %>
+      <%= @sentences[0] %>
+      <br><br>
+      <%= @sentences[1] %>
+      <br><br>
+      <%= @sentences[2] %>
+      <%= @sentences[3] %>
       <br>
-    <% end %>
-
+      <%= @sentences[4] %>
+      <%= @sentences[5] %>
+      <%= @sentences[6] %>
+      <br>
+      <%= @sentences[7] %>
+      <%= @sentences[8] %>
+      <br><br>
+      <%= @sentences[9] %>
+      <br><br>
+      <%= @sentences[10] %>
+      <br><br>
+      <%= @sentences[11] %>
+      <br>
+      <%= @sentences[12] %>
+      <br>
+      <%= @sentences[13] %>
+      <br>
+      <%= @sentences[14] %>
   </body>
 </html>
