--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -80,7 +80,7 @@
           <p><strong>Upload a Document</strong></p>
           <div data-controller="submit-form">
             <%= simple_form_for @document, data: { action: "change->submit-form#send", remote:true } do |f| %>
-              <%= f.input :photo, as: :file %>
+              <%= f.input :photo, as: :file, wrapper_html:{class: "input-container"}%>
           <% end %>
           </div>
 
