--- a/app/views/layouts/pdf.pdf.erb
+++ b/app/views/layouts/pdf.pdf.erb
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= wicked_pdf_stylesheet_link_tag "show" %>
+    <%= wicked_pdf_stylesheet_link_tag "pdf" %>
     <%= wicked_pdf_stylesheet_pack_tag "application" %>
 
   </head>
