--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title><%= meta_title %></title>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="5zDsbGHkOlR3-7DPXuVoyUW0aiHgRLeUxY6IH6FBTUM" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="<%= meta_description %>">
     <meta name="apple-mobile-web-app-capable" content="yes">
