--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,9 +1,9 @@
 <div class = "container-sm p-4 mt-3 form">
 <%= simple_form_for @appointment do |f| %>
-  <%= f.input :event_title %>
+  <%= f.input :title %>
   <%= f.input :description %>
-  <%= f.input :date, html5: true %>
+  <%= f.input :start_date, html5: true %>
   <%= f.input :address %>
-  <%= f.input :description %>
-  <%= f.button :submit, "Add Event", class: "button" %>
+  <%= f.button :submit, "Add Appointment", class: "button" %>
 <% end %>
+</div>
