--- a/app/assets/stylesheets/pages/_appointment.scss
+++ b/app/assets/stylesheets/pages/_appointment.scss
@@ -1,8 +1,44 @@
-.appointment-card{
+.appointments-header{
+  color: white;
+}
+
+
+.appointment-card {
   margin-top: 30px;
   background-color: #f0f8ff;
-  text-align: left;
-  padding: 40px;
+  padding: 20px;
   line-height: 40px;
+  width: 100%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  backdrop-filter: blur(10px);
+  transition: 0.5s ease-in-out;
+  }
 
+
+  .appointment-card:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+  }
+
+
+.appointment-form{
+  padding: 20px;
+  background: white;
+  border-radius: 10px;
+  transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+.form-label{
+  background-color: #f0f8ff;
+}
+
+.appointment-img{
+  width: 100px;
+  height: 100px;
 }
