--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,17 +1,17 @@
 <div class = "container">
-<h1 class = "text-center mt-5 "> Upcoming Appointments</h1>
+<h1 class = "text-center mt-5 appointments-header "> Upcoming Appointments</h1>
 
-<div class = "appointment-card mb-3">
-<ul>
 <% @appointments.each do |appointment| %>
-<li>Title:<%= appointment.title %></li>
+<div class = "appointment-card mb-3">
+<%= image_tag "appointment.png", class: "img-fluid rounded-start appointment-img" %>
+<ul>
+<li><strong><%= appointment.title %></strong></li>
 <li>Description:<%= appointment.description %></li>
 <li>Address:<%= appointment.address %></li>
 <li> Date: <%= appointment.start_date.strftime("%b %d, %Y") %></li>
-
-<% end %>
 <ul>
 </div>
+<% end %>
 
 
 <%= link_to "New Appointment", new_appointment_path, class: "button" %>
