--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,5 +1,5 @@
 <div class = "container-sm p-4 mt-3 form">
-<%= simple_form_for @appointment do |f| %>
+<%= simple_form_for(@appointment, html: { class: "appointment-form" }) do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :start_date, html5: true %>
