HTML version of mail_to

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -45,6 +45,8 @@
         </button>
     <% end %>
 
+<%# <a href="mail_to:doctor@email.com?cc=marie@email.com&subject=Medical%20Document&body=Dear%20Doctor%0D%0DPlease%20find%20enclosed%20my%20medical%20document%2E%%0D
+%0D%0DKind%20regards%2C%0DMarie%20De%20Clerck"></a> %>
 
   <% end %>
 </div>
