completed-form-styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,3 +43,16 @@ a:hover{
     color: #ffffff;
   }
 }
+
+.form-control:focus{
+  background-color:#ffffff;
+  border-color: #5ABAAE;
+}
+
+.form-check-input{
+  background-color: #ffffff;
+}
+
+.form-select{
+  background-color:#ffffff;
+}
