--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,4 +1,5 @@
-<div class = "container-sm p-4 mt-3 form">
+<div class = "container-sm p-4 mt-3">
+<h1 class = "appointments-header text-center"> Make An Appointment</h1>
 <%= simple_form_for(@appointment, html: { class: "appointment-form" }) do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
