--- a/app/views/shared/_allergies.html.erb
+++ b/app/views/shared/_allergies.html.erb
@@ -1,7 +1,7 @@
 <div class = "container-sm p-4 mt-3">
-<h1>Allergies</h1>
-
-<%= simple_form_for @user do |f| %>
+<h1 class = "user-header">Allergies</h1>
+<%= simple_form_for(@user, html: { class: "user-form" }) do |f| %>
   <%= f.input :allergies, collection: User::ALLERGIES, label: 'Add an Allergy' %>
   <%= f.button :submit, "Submit", class: "button" %>
 <% end %>
+</div>
