--- a/app/views/shared/_medical_history_form.html.erb
+++ b/app/views/shared/_medical_history_form.html.erb
@@ -1,7 +1,7 @@
 <div class = "container-sm p-4 mt-3">
-<h1>Medical History</h1>
-<%= simple_form_for @user do |f| %>
-   <%= f.input :date, html5: true %>
+<h1 class = "user-header">Medical History</h1>
+<%= simple_form_for(@user, html: { class: "user-form" })  do |f| %>
+   <%# <%= f.input :date, html5: true %>
   <%= f.input :weight %>
   <%= f.button :submit, "Submit", class: "button" %>
 <% end %>
