--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @document do |f| %>
   <%= f.input :doctor_name, placeholder: @document.doctor_name %>
-  <%= f.input :country %>
+  <%= f.input :country, collection: Document::COUNTRIES, label: 'Country' %>
   <%= f.input :date, html5: true %>
   <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
   <%= f.input :comment %>
