--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,11 +60,17 @@
       </div>
       <div class = "flex-container">
           <span class="material-symbols-outlined md-40">stethoscope<div><p class = "health-status">Illness</p></div></span>
-          <p class = "health-info">Anemia</p>
+          <div class="allergies">
+          <span class="badge text-bg-secondary" >Anemia</span>
+          <span class="badge text-bg-secondary" >Migraine</span>
+      </div>
       </div>
       <div class = "flex-container">
           <span class="material-symbols-outlined md-40">clinical_notes<div><p class = "health-status">Doctor Log</p></div></span>
-          <p class = "health-info">Dr.Levitt</p>
+          <div class="allergies">
+          <span class="badge text-bg-secondary" >中村佐藤</span>
+          <span class="badge text-bg-secondary" >Paul Johnson</span>
+      </div>
       </div>
 <% else %>
   <div class="logo-container d-flex">
