--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,11 +35,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
-    <div class="splash">
-      <% #= render "shared/splash_page" %>
+      <%= render "shared/navbar" %>
+      <%= render "shared/flashes" %>
+    <div class="content">
+      <%= yield %>
     </div>
-    <%= render "shared/navbar" %>
-    <%= render "shared/flashes" %>
-    <%= yield %>
+    </div>
+    <%= render "shared/footer" %>
   </body>
 </html>
