--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,84 +1,84 @@
 <% if current_user %>
-
   <div class="homepage-container">
-  <span><h1 class = "welcome">Welcome back Marie!<h1></span>
-  <div class = "cards-wrapper">
+    <span><h1 class = "welcome">Welcome back Marie!<h1></span>
+    <div class = "cards-wrapper">
       <div class = "row g-1 d-flex justify-content-center">
         <div class = "col">
-        <%= link_to documents_path do %>
-          <div class = "card home-icon-card">
-            <%= image_tag "documents.png", class: "img-fluid icon-image" %>
-          </div>
-        <% end %>
+          <%= link_to documents_path do %>
+            <div class = "card home-icon-card">
+              <%= image_tag "documents.png", class: "img-fluid icon-image" %>
+            </div>
+          <% end %>
           <p class = "card-label">Documents</p>
         </div>
-    <div class = "col">
-      <div class = "card home-icon-card">
-          <%= image_tag "calendar.png", class: "img-fluid icon-image" %>
+        <div class = "col">
+          <%= link_to appointments_path do %>
+            <div class = "card home-icon-card">
+              <%= image_tag "calendar.png", class: "img-fluid icon-image" %>
+            </div>
+          <% end %>
+          <p class = "card-label">Appointments</p>
         </div>
-      <p class = "card-label">Appointments</p>
-  </div>
-    <div class = "col">
-      <div class = "card home-icon-card">
-          <%= image_tag "world.png", class: "img-fluid icon-image" %>
-          </div>
-        <p class = "card-label">Travel Info</p>
-    </div>
-    <div class = "col">
-      <div class = "card home-icon-card">
-        <%= image_tag "tools.png", class: "img-fluid icon-image" %>
+        <%# <div class = "col"> %>
+          <%# <div class = "card home-icon-card"> %>
+            <%#= image_tag "world.png", class: "img-fluid icon-image" %>
+          <%# </div> %>
+          <%# <p class = "card-label">Travel Info</p> %>
+        <%# </div> %>
+        <div class = "col">
+          <div class = "card home-icon-card">
+            <%= image_tag "tools.png", class: "img-fluid icon-image" %>
           </div>
           <p class = "card-label">Tools</p>
+        </div>
       </div>
     </div>
   </div>
-  </div>
-</div>
+
   <div class = "card health-card">
     <h3 class="text-center">Health Status</h3>
-      <%= image_tag "health.png", class: "img-fluid health-card-image" %>
-      <div class = "flex-container">
+    <%= image_tag "health.png", class: "img-fluid health-card-image" %>
+    <div class = "flex-container">
       <span class="material-symbols-outlined md-40">allergy<div><p class = "health-status"><%= link_to "Allergy", {form_name: "allergies"} %></p></div></span>
-          <p class = "health-info">
+      <p class = "health-info">
 
-          <div class="allergies">
-          <% current_user.allergies.each do |allergy| %>
-            <span class="badge text-bg-secondary" ><%= allergy %></span>
-          <% end %>
-          </div>
+      <div class="allergies">
+        <% current_user.allergies.each do |allergy| %>
+          <span class="badge text-bg-secondary" ><%= allergy %></span>
+        <% end %>
+      </div>
 
-          </p>
-
+      </p>
+    </div>
+    <div class = "flex-container">
+      <span class="material-symbols-outlined md-40 ">medication_liquid<div><p class = "health-status">Prescription</p></div></span>
+      <%# <p class = "health-info">Imuran</p> %>
+      <div class="allergies">
+        <span class="badge text-bg-secondary" >Imuran</span>
+        <span class="badge text-bg-secondary" >Desloratadine 30g</span>
       </div>
-      <div class = "flex-container">
-    <span class="material-symbols-outlined md-40 ">medication_liquid<div><p class = "health-status">Prescription</p></div></span>
-          <%# <p class = "health-info">Imuran</p> %>
-          <div class="allergies">
-          <span class="badge text-bg-secondary" >Imuran</span>
-          <span class="badge text-bg-secondary" >Desloratadine 30g</span>
+    </div>
+    <div class = "flex-container">
+      <span class="material-symbols-outlined md-40">stethoscope<div><p class = "health-status">Illness</p></div></span>
+      <div class="allergies">
+        <span class="badge text-bg-secondary" >Anemia</span>
+        <span class="badge text-bg-secondary" >Migraine</span>
       </div>
+    </div>
+    <%# <div class = "flex-container">
+      <span class="material-symbols-outlined md-40">clinical_notes<div><p class = "health-status">Doctor Log</p></div></span>
+      <div class="allergies">
+        <span class="badge text-bg-secondary" >中村佐藤</span>
+        <span class="badge text-bg-secondary" >Paul Johnson</span>
       </div>
-      <div class = "flex-container">
-          <span class="material-symbols-outlined md-40">stethoscope<div><p class = "health-status">Illness</p></div></span>
-          <div class="allergies">
-          <span class="badge text-bg-secondary" >Anemia</span>
-          <span class="badge text-bg-secondary" >Migraine</span>
-      </div>
-      </div>
-      <div class = "flex-container">
-          <span class="material-symbols-outlined md-40">clinical_notes<div><p class = "health-status">Doctor Log</p></div></span>
-          <div class="allergies">
-          <span class="badge text-bg-secondary" >中村佐藤</span>
-          <span class="badge text-bg-secondary" >Paul Johnson</span>
-      </div>
-      </div>
+    </div> %>
 <% else %>
-  <div class="logo-container d-flex">
-  <div class = "app-title animate__animated animate__fadeIn animate__delay-1s	1s ">
-    <%= image_tag "splash_logo.png", class: "splash-logo img-fluid  " %>
-    <h1 class = "title">Health Pocket<h1>
-    <p class = "app-slogan">Your health companion</p>
+    <div class="logo-container d-flex">
+      <div class = "app-title animate__animated animate__fadeIn animate__delay-1s	1s">
+        <%= image_tag "splash_logo.png", class: "splash-logo img-fluid" %>
+        <h1 class = "title">Health Pocket<h1>
+        <p class = "app-slogan">Your health companion</p>
+        </div>
     </div>
   </div>
 <% end %>
-</div>
