--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,6 +2,7 @@
 @import "home";
 @import "documents";
 @import "documents-show";
+@import "documents-new";
 @import "users";
 @import "appointment";
 @import "login";
