--- a/app/views/shared/_medical_history_form.html.erb
+++ b/app/views/shared/_medical_history_form.html.erb
@@ -4,4 +4,5 @@
    <%# <%= f.input :date, html5: true %>
   <%= f.input :weight %>
   <%= f.button :submit, "Submit", class: "button" %>
+  <%= link_to "Back", user_path, class: "button" %>
 <% end %>
